[#DCMEE-630] Provide binary distribution package for standalone Media Creator (dcm4chee-cdw)